# agent

./: .gitignore
auto-video/: .gitignore  SESSION_HANDOVER.md  pyproject.toml
auto-video/brand/: character.yaml  narrative.yaml
auto-video/config/: api-keys.env.example  models.yaml
auto-video/scripts/: gemini_image.py  generate_images.py  produce.py  veo3_video.py
auto-video/tests/: test_compositor.py  test_elevenlabs_tts.py  test_gemini_client.py  test_gemini_image.py  test_veo3_video.py  test_youtube_metadata.py
auto-video/user-scripts/: EP.1.rtf
contents-agent/: SESSION_HANDOVER.md  ai-coding-tools-comparison-2026-03.md  claude-code-march-2026-community-reactions.md
contents-agent/agents/: qa-reviewer.md  renderer.md  researcher.md  scene-designer.md  scriptwriter.md  subtitle-engineer.md  voice-engineer.md
contents-agent/config/: pipeline.json  styles.json
contents-agent/profiles/: benchmarks.json  character-narrative-v1.md  character-v1.json  maker-evan.json
contents-agent/research/: claude-code-march-2026-updates.md
contents-agent/scripts/: sh.voicebox.watchdog.plist  tts-generate.py  voicebox-healthcheck.sh  voicebox-watchdog.sh
contents-creator/: .gitignore  01-PRD.json  02-TRD.yaml  03-IA.json  04-UserFlow.csv  05-DB-Schema.sql  06-BusinessLogic.txt  CHARACTER_AND_CHECKLIST.md  PIPELINE_SPEC.md  SESSION_HANDOVER.md  package.json  pnpm-lock.yaml
creator/: CLAUDE.md  SESSION_HANDOVER.md  VISUAL_SPEC.md
creator/docs/: PRD.md  (+9 more)
voice-clone/: .gitignore  README.md  pyproject.toml
voice-clone/src/voice_clone/: __init__.py  cli.py  engine.py
(+345 files in other folders)
